force-app/main/default/objects/DC_Cross_Connect__c/DC_Cross_Connect__c.object-meta.xml
<CustomObject>
    <label>Cross Connect</label>
    <nameField>
        <label>Cross Connect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cross Connects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>