force-app/main/default/objects/DC_Cross_Connect__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Get Building Name from a formula for reference to the Customer through the customer portal.</description>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Cross Connects</relationshipLabel>
    <relationshipName>Cross_Connects</relationshipName>
    <type>Lookup</type>
</CustomField>