force-app/main/default/objects/DC_Cross_Connect__c/fields/Circuit_Ref__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Ref__c</fullName>
    <description>This field will reference the Cherwell ID of the legacy case that was created from that system. Future Cross Connects will reference the Case through a different look up field.</description>
    <label>Legacy Cherwell ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>