force-app/main/default/objects/DC_Cross_Connect__c/fields/Connection_Case__c.field-meta.xml
<CustomField>
    <fullName>Connection_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connection Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cross Connects</relationshipLabel>
    <relationshipName>Cross_Connects</relationshipName>
    <type>Lookup</type>
</CustomField>