force-app/main/default/objects/DC_Cross_Connect__c/fields/Connection_Date__c.field-meta.xml
<CustomField>
    <fullName>Connection_Date__c</fullName>
    <description>The date that this Cross Connect was connected.</description>
    <label>Connection Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>