force-app/main/default/objects/DC_Cross_Connect__c/fields/Cross_Connect_Auto_Gen_ID__c.field-meta.xml
<CustomField>
    <fullName>Cross_Connect_Auto_Gen_ID__c</fullName>
    <description>Auto-generated number to identify cross connects.</description>
    <displayFormat>XC - {00000000}</displayFormat>
    <label>Cross Connect Auto-Gen ID</label>
    <type>AutoNumber</type>
</CustomField>