force-app/main/default/objects/DC_Cross_Connect__c/fields/Destination_Account__c.field-meta.xml
<CustomField>
    <fullName>Destination_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Account that the requesting party of the Cross Connect is seeking to connect to.</description>
    <label>Destination Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cross Connects (Destination Account)</relationshipLabel>
    <relationshipName>Cross_Connects1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>