force-app/main/default/objects/DC_Cross_Connect__c/fields/Destination_Port__c.field-meta.xml
<CustomField>
    <fullName>Destination_Port__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Port of the Account that the requesting party of the Cross Connect is seeking to connect to.</description>
    <label>Destination Port</label>
    <referenceTo>DC_Port__c</referenceTo>
    <relationshipLabel>Cross Connects (Destination Port)</relationshipLabel>
    <relationshipName>Cross_Connects1</relationshipName>
    <type>Lookup</type>
</CustomField>