force-app/main/default/objects/DC_Cross_Connect__c/fields/Disconnect_Case__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disconnect Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cross Connects (Disconnect Case)</relationshipLabel>
    <relationshipName>Cross_Connects1</relationshipName>
    <type>Lookup</type>
</CustomField>