force-app/main/default/objects/DC_Cross_Connect__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <description>The physical medium of the cross connect.</description>
    <label>Media Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single-Mode Fiber</fullName>
            </value>
            <value>
                <fullName>Multi-Mode Fiber</fullName>
            </value>
            <value>
                <fullName>CAT6</fullName>
            </value>
            <value>
                <fullName>DS3 Coax</fullName>
            </value>
            <value>
                <fullName>50 Micron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>