force-app/main/default/objects/DC_Cross_Connect__c/fields/Origination_Account__c.field-meta.xml
<CustomField>
    <fullName>Origination_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Account that is requesting this Cross Connect.</description>
    <label>Origination Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cross Connects</relationshipLabel>
    <relationshipName>Cross_Connects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>