force-app/main/default/objects/DC_Cross_Connect__c/fields/Origination_Port__c.field-meta.xml
<CustomField>
    <fullName>Origination_Port__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Port of the Account that is requesting this Cross Connect.</description>
    <label>Origination Port</label>
    <referenceTo>DC_Port__c</referenceTo>
    <relationshipLabel>Cross Connects</relationshipLabel>
    <relationshipName>Cross_Connects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>