force-app/main/default/objects/DC_Cross_Connect__c/fields/Tie_Cable_Path__c.field-meta.xml
<CustomField>
    <fullName>Tie_Cable_Path__c</fullName>
    <label>Tie Cable Path</label>
    <type>TextArea</type>
</CustomField>