force-app/main/default/objects/DC_Cross_Connect__c/fields/XC_Disconnect_Date__c.field-meta.xml
<CustomField>
    <fullName>XC_Disconnect_Date__c</fullName>
    <description>The date that this Cross Connect was disconnected.</description>
    <label>XC Disconnect Date</label>
    <type>Date</type>
</CustomField>