force-app/main/default/objects/DC_Cross_Connect__c/fields/Xconnect_date__c.field-meta.xml
<CustomField>
    <fullName>Xconnect_date__c</fullName>
    <description>The date that this Cross Connect was connected.</description>
    <label>Xconnect date</label>
    <type>Date</type>
</CustomField>