force-app/main/default/objects/DC_Cross_Connect__c/fields/Xconnect_ID__c.field-meta.xml
<CustomField>
    <fullName>Xconnect_ID__c</fullName>
    <label>Xconnect ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>