force-app/main/default/objects/DC_Cross_Connect__c/fields/Xconnect_Status__c.field-meta.xml
<CustomField>
    <fullName>Xconnect_Status__c</fullName>
    <description>Determines the status of the Cross Connect. Active means actively connected, disconnected means it is no longer in place, and in progress is the plaseholder status for any Cases in progress.</description>
    <label>Xconnect Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>