force-app/main/default/objects/DC_Cross_Connect__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Building__c</columns>
    <columns>Origination_Account__c</columns>
    <columns>Destination_Account__c</columns>
    <columns>Xconnect_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Building__c</field>
        <operation>equals</operation>
        <value>1102 grand</value>
    </filters>
    <label>All</label>
</ListView>