force-app/main/default/objects/DC_Cross_Connect__c/listViews/X1102_Grand.listView-meta.xml
<ListView>
    <fullName>X1102_Grand</fullName>
    <columns>NAME</columns>
    <columns>Building__c</columns>
    <columns>Origination_Account__c</columns>
    <columns>Destination_Account__c</columns>
    <columns>Xconnect_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>1102</value>
    </filters>
    <label>1102 Grand</label>
</ListView>