force-app/main/default/objects/DC_Cross_Connect__c/listViews/X1301_Fannin.listView-meta.xml
<ListView>
    <fullName>X1301_Fannin</fullName>
    <columns>NAME</columns>
    <columns>Building__c</columns>
    <columns>Origination_Account__c</columns>
    <columns>Destination_Account__c</columns>
    <columns>Xconnect_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>1301</value>
    </filters>
    <label>1301 Fannin</label>
</ListView>