force-app/main/default/objects/DC_Cross_Connect__c/listViews/X210_N_Tucker.listView-meta.xml
<ListView>
    <fullName>X210_N_Tucker</fullName>
    <columns>NAME</columns>
    <columns>Building__c</columns>
    <columns>Origination_Account__c</columns>
    <columns>Destination_Account__c</columns>
    <columns>Xconnect_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>210</value>
    </filters>
    <label>210 N Tucker</label>
</ListView>