force-app/main/default/objects/DC_Cross_Connect__c/listViews/X401_N_Broad.listView-meta.xml
<ListView>
    <fullName>X401_N_Broad</fullName>
    <columns>NAME</columns>
    <columns>Building__c</columns>
    <columns>Origination_Account__c</columns>
    <columns>Destination_Account__c</columns>
    <columns>Xconnect_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>401</value>
    </filters>
    <label>401 N Broad</label>
</ListView>