force-app/main/default/objects/DC_Cross_Connect__c/listViews/X701_Henry.listView-meta.xml
<ListView>
    <fullName>X701_Henry</fullName>
    <columns>NAME</columns>
    <columns>Building__c</columns>
    <columns>Origination_Account__c</columns>
    <columns>Destination_Account__c</columns>
    <columns>Xconnect_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>701</value>
    </filters>
    <label>701 Henry</label>
</ListView>