force-app/main/default/objects/DC_Cross_Connect__c/listViews/X717_S_Wells.listView-meta.xml
<ListView>
    <fullName>X717_S_Wells</fullName>
    <columns>NAME</columns>
    <columns>Building__c</columns>
    <columns>Origination_Account__c</columns>
    <columns>Destination_Account__c</columns>
    <columns>Xconnect_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>717</value>
    </filters>
    <label>717 S Wells</label>
</ListView>