force-app/main/default/objects/DC_Cross_Connect__c/listViews/X7801_Nieman_Road.listView-meta.xml
<ListView>
    <fullName>X7801_Nieman_Road</fullName>
    <columns>NAME</columns>
    <columns>Building__c</columns>
    <columns>Origination_Account__c</columns>
    <columns>Destination_Account__c</columns>
    <columns>Xconnect_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>7801</value>
    </filters>
    <label>7801 Nieman Road</label>
</ListView>