force-app/main/default/objects/DC_Cross_Connect__c/listViews/X900_Walnut.listView-meta.xml
<ListView>
    <fullName>X900_Walnut</fullName>
    <columns>NAME</columns>
    <columns>Building__c</columns>
    <columns>Origination_Account__c</columns>
    <columns>Destination_Account__c</columns>
    <columns>Xconnect_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>900</value>
    </filters>
    <label>900 Walnut</label>
</ListView>